--- a/force-app/main/default/lwc/createPlacement/createPlacement.css
+++ b/force-app/main/default/lwc/createPlacement/createPlacement.css
@@ -1,5 +1,3 @@
-
-
 .mycontainer{
     
     
@@ -26,4 +24,25 @@
 .slds-modal__header {
    background-color: #08475b; /* Change the header color to blue */
    color: white; /* Change text color to white for better contrast */
+}
+.pagination-controls {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+.myinputwidth{
+  /*  width: 58%; */
+}
+
+.mytbloc{
+   text-align: left;
+     
+    float: left;
+     
+    /* : 8px; */
+    border-radius: 8px;
+    
+    box-shadow: 0 1px 2px 0 rgba(60, 64, 67, .3), 0 2px 6px 2px rgba(60, 64, 67, .15);
+    margin: 0px 15px -4px 0px;
+    overflow: hidden;
 }
